--- a/frontend/views/user/service_profile.html
+++ b/frontend/views/user/service_profile.html
@@ -73,10 +73,13 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSShIJMLgaSUzZOYs4kfL4mh2v7_onGECPyxg&s" class="rounded border hover:border-primary h-60 w-60 object-contain bg-gray-50">
             </div>
         </section>
+        <section>
+            
+        </section>
         <section class="mt-8">
             <div class="sm:flex">
-            <h3 class="text-xl font-bold text-gray-800 flex">Customer Reviews</h3>
-                    <div class="flex items-center text-primary gap-1 ml-2 bg-gray-50 py-2 px-3 rounded">
+            <h3 class="text-xl font-bold text-gray-800 flex">Customer Exploration</h3>
+                    <div class="flex items-center text-primary gap-1 ml-3 mt-1 rounded">
                         <i data-lucide="star" class="h-5 w-5 fill-primary inline-block"></i>
                         <i data-lucide="star" class="h-5 w-5 fill-primary inline-block"></i>
                         <i data-lucide="star" class="h-5 w-5 fill-primary inline-block"></i>
@@ -84,6 +87,22 @@
                         <i data-lucide="star" class="h-5 w-5 inline-block"></i>
                     </div>
             </div>
+            <table class="w-full sm:w-[50vw] border my-5">
+                <tbody>
+                    <tr class="hover:bg-gray-50">
+                        <td class="border border-gray-300 px-4 py-2">Customer Setisfaction</td>
+                        <td class="border border-gray-300 px-4 py-2">98%</td>
+                    </tr>
+                    <tr class="hover:bg-gray-50">
+                        <td class="border border-gray-300 px-4 py-2">Service Reliability</td>
+                        <td class="border border-gray-300 px-4 py-2">57%</td>
+                    </tr>
+                    <tr class="hover:bg-gray-50">
+                        <td class="border border-gray-300 px-4 py-2">Response Time</td>
+                        <td class="border border-gray-300 px-4 py-2">85%</td>
+                    </tr>
+                </tbody>
+            </table>
             <div class="mt-4 space-y-4">
                 <div class="p-4 border rounded bg-gray-100 shadow-sm">
                     <p class="font-semibold text-gray-800 justify-between flex">Jane Smith <span class="text-gray-500 text-sm">Jan - 2024</span></p>
