`Update frontend views to use absolute path for color_config.js script`

--- a/frontend/views/user/service_profile.html
+++ b/frontend/views/user/service_profile.html
@@ -7,7 +7,7 @@
     <title>Service Provider Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Tailwind Configuration -->
-    <script src="../public/js/color_config.js"></script>
+    <script src="/frontend/public/js/color_config.js"></script>
     <!-- Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
