--- a/frontend/views/user/registration.html
+++ b/frontend/views/user/registration.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../public/js/color_config.js"></script>
+    <script src="/frontend/public/js/color_config.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
