--- a/frontend/views/user/about.html
+++ b/frontend/views/user/about.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <section>
+    <section class="bg-gray-50">
         <!-- Hero section -->
-        <div class="relative bg-white overflow-hidden">
+        <div class="relative overflow-hidden">
             <div class="max-w-7xl mx-auto">
-                <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-                    <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
+                <div class="relative z-10 pb-8 bg-gray-50 sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+                    <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-gray-50 transform translate-x-1/2"
                         fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
                         <polygon points="50,0 100,0 50,100 0,100" />
                     </svg>
@@ -30,12 +30,12 @@
                                 <span class="block text-primary-600">Our <span
                                         class="text-primary tracking-wide">EZService</span></span>
                             </h1>
-                            <p
-                                class="mt-3 text-md text-gray-500 sm:mt-5 sm:max-w-xl sm:mx-auto md:mt-5 md:text-md lg:mx-0">
+                            <p class="mt-3 text-md text-gray-500 sm:mt-5 sm:max-w-xl sm:mx-auto md:mt-5 md:text-md lg:mx-0">
                                 Founded in 2010, our company has been at the forefront of innovation, delivering
                                 exceptional products and services to our clients worldwide. We're committed to
                                 excellence, integrity, and customer satisfaction.
                             </p>
+                            <button class="px-3 py-2 bg-primary border-none text-white ml-2 mt-3 rounded">Go to Home</button>
                         </div>
                     </div>
                 </div>
@@ -47,42 +47,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-gray-50 pt-10 pb-1">
-        <h1 class="text-2xl md:text-4xl lg:text-4xl font-bold text-center mb-16">
-            Change Lifestyle
-            <span class="block text-primary text-3xl md:text-6xl">Those Who've Made Life Easy</span>
-          </h1>
-      
-          <!-- Stats Grid -->
-          <div class="grid grid-cols-2 lg:grid-cols-4 gap-8 mb-16 star_grid">
-            <!-- Companies -->
-            <div class="text-center">
-              <p class="text-primary text-md">Users</p>
-              <h2 class="text-3xl md:text-5xl font-extrabold mb-1 " data-val="600">455</h2>
-              <p class="text-gray-500 text-sm">Growing Users</p>
-            </div>
-      
-            <div class="text-center">
-              <p class="text-primary text-md">Services Available</p>
-              <h2 class="text-3xl md:text-5xl font-extrabold mb-1" data-val="25">47</h2>
-              <p class="text-gray-500 text-sm">Available now</p>
-            </div>
-      
-            <!-- Templates -->
-            <div class="text-center">
-              <p class="text-primary text-md">Fullfilled Services</p>
-              <h2 class="text-3xl md:text-5xl font-extrabold mb-1" data-val="500">64</h2>
-              <p class="text-gray-500 text-sm">From DreamIT Solutions</p>
-            </div>
-      
-            <!-- Ratings -->
-            <div class="text-center">
-              <p class="text-primary text-md">Ratings</p>
-              <h2 class="text-3xl md:text-5xl font-extrabold mb-1">4.5/5</h2>
-              <p class="text-gray-500 text-sm">In Industry</p>
-            </div>
-          </div>
-    </section>
+    
     <section>
         <!-- Values Section -->
         <div class="bg-white py-16">
@@ -159,8 +124,94 @@
             </div>
         </div>
     </section>
+
+    <!-- How It Works -->
+    <section class="container mx-auto px-4 md:pb-5 relative" id="main_id">
+        <h2 class="text-3xl font-bold text-center">How Process go through</h2>
+        <!-- card 1 -->
+    <div class="flex flex-col md:flex-row items-center gap-8 mx-auto bg-white p-7 md:p-10 shadow-lg h-full rounded my-5 border-b hover:border-primary">
+        <div class="w-full md:w-2/3 space-y-6">
+          <h1 class="text-4xl font-bold text-gray-800 -mb-4">
+            Choose Service
+          </h1>
+          <p class="text-gray-600 text-lg">
+            Find Service is a platform that connects users with professional service providers across various industries. It allows users to search, compare, and book services effortlessly while ensuring transparency through reviews and ratings.
+          </p>
+        </div>
+        <div class="relative w-full md:w-1/3 h-[170px] flex justify-center items-center md:flex">
+          <img src="/frontend/public/img/service img1.svg" alt="Electric Car" class="max-w-full max-h-full object-contain" />
+        </div>
+      </div>
+
+      <!-- card 2 -->
+    <div class="flex flex-col md:flex-row items-center gap-8 mx-auto bg-white p-7 md:p-10 shadow-lg h-full rounded my-5 border-b hover:border-primary">
+        <div class="w-full md:w-2/3 space-y-6">
+          <h1 class="text-4xl font-bold text-gray-800 -mb-4">
+            Take Conversation
+          </h1>
+          <p class="text-gray-600 text-lg">
+            Took conversation is a convenient platform that allows users to schedule conversations with service providers effortlessly. It streamlines the booking process by providing real-time availability, reminders, and easy rescheduling options..
+          </p>
+        </div>
+        <div class="relative w-full md:w-1/3 h-[170px] flex justify-center items-center md:flex">
+          <img src="/frontend/public/img/service img2.svg" alt="Electric Car" class="max-w-full max-h-full object-contain" />
+        </div>
+      </div>
+
+      <!-- card 3 -->
+    <div class="flex flex-col md:flex-row items-center gap-8 mx-auto bg-white p-7 md:p-10 shadow-lg h-full rounded my-5 border-b hover:border-primary">
+        <div class="w-full md:w-2/3 space-y-6">
+          <h1 class="text-4xl font-bold text-gray-800 -mb-4">
+            Get Service
+          </h1>
+          <p class="text-gray-600 text-lg">
+            Get Service is a reliable platform that helps users find and access professional services quickly. It connects customers with verified service providers, ensuring quality and convenience. With easy booking, real-time availability, and customer reviews, it simplifies the process of getting the right service when needed.
+          </p>
+        </div>
+        <div class="relative w-full md:w-1/3 h-[170px] flex justify-center items-center md:flex">
+          <img src="/frontend/public/img/service img3.svg" alt="Electric Car" class="max-w-full max-h-full object-contain" />
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-gray-50 pt-10 pb-1">
+        <h1 class="text-2xl md:text-4xl lg:text-4xl font-bold text-center mb-16">
+            Change Lifestyle
+            <span class="block text-primary text-3xl md:text-6xl">Those Who've Made Life Easy</span>
+          </h1>
+      
+          <!-- Stats Grid -->
+          <div class="grid grid-cols-2 lg:grid-cols-4 gap-8 mb-16 star_grid">
+            <!-- Companies -->
+            <div class="text-center">
+              <p class="text-primary text-md">Users</p>
+              <h2 class="text-3xl md:text-5xl font-extrabold mb-1 " data-val="600">455</h2>
+              <p class="text-gray-500 text-sm">Growing Users</p>
+            </div>
+      
+            <div class="text-center">
+              <p class="text-primary text-md">Services Available</p>
+              <h2 class="text-3xl md:text-5xl font-extrabold mb-1" data-val="25">47</h2>
+              <p class="text-gray-500 text-sm">Available now</p>
+            </div>
+      
+            <!-- Templates -->
+            <div class="text-center">
+              <p class="text-primary text-md">Fullfilled Services</p>
+              <h2 class="text-3xl md:text-5xl font-extrabold mb-1" data-val="500">64</h2>
+              <p class="text-gray-500 text-sm">From DreamIT Solutions</p>
+            </div>
+      
+            <!-- Ratings -->
+            <div class="text-center">
+              <p class="text-primary text-md">Ratings</p>
+              <h2 class="text-3xl md:text-5xl font-extrabold mb-1">4.5/5</h2>
+              <p class="text-gray-500 text-sm">In Industry</p>
+            </div>
+          </div>
+    </section>
     <section>
-        <div class="mx-auto bg-gray-50 p-10">
+        <div class="mx-auto bg-gray-50 p-10 mt-5">
             <!-- Director Message Section -->
             <div class="relative grid md:grid-cols-2 gap-8 items-center">
                 <!-- Left Column with Image -->
