--- a/frontend/views/user/service_ranking.html
+++ b/frontend/views/user/service_ranking.html
@@ -34,7 +34,7 @@
         <!-- Header Section -->
             <div class="flex justify-between items-start sm:items-center mb-6">
                 <h1 class="text-xl sm:text-2xl font-bold text-gray-800">Service Rankings</h1>
-                <button id="openServiceList" class="border py-2 px-3 rounded tracking-wide bg-primary text-white">Servicelist</button>
+                <button id="openServiceList" class="flex border py-2 px-3 rounded tracking-wide bg-primary text-white"><i data-lucide="list-minus"></i>&nbsp;List</button>
             </div>
 
         <!-- Rankings List -->
