--- a/frontend/views/user/services.html
+++ b/frontend/views/user/services.html
@@ -76,9 +76,9 @@
                 </div>
 
                 <!-- Service Providers Grid -->
-                <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-4 sm:m-2 pt-12">
+                <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-4 px-2 md:px-0 sm:m-2 pt-12">
                     <!-- Service Provider Card 1 -->
-                    <a href="../views/service_profile.html" class="bg-white overflow-hidden rounded-lg shadow-sm">
+                    <a href="/frontend/views/user/service_profile.html" class="bg-white overflow-hidden rounded-lg shadow-sm">
                         <div class="flex items-start space-x-4">
                             <div class="flex h-[130px] w-[110px] sm:h-[120px] sm:w-40 bg-gray-100">
                                 <img src="https://c8.alamy.com/comp/DERFBR/colourful-indian-shop-in-puttaparthi-andhra-pradesh-india-DERFBR.jpg" 
