--- a/frontend/views/user/user_profile.html
+++ b/frontend/views/user/user_profile.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100 font-sans">
     <div class="bg-white mx-2 sm:mx-20 my-5 px-5 py-3 rounded-lg overflow-x-scroll flex gap-2">
         <p><a href="#" class="text-gray-600 hover:text-primary mr-2">profile</a>/</p>
-        <p><a href="user_servicelist.html" class="text-gray-600 hover:text-primary mr-2">service</a>/</p>
+        <p><a href="user_servicelist.html" class="text-gray-600 hover:text-primary mr-2">order</a>/</p>
         <p><a href="#" class="text-gray-600 hover:text-primary mr-2">notification</a>/</p>
         <p><a href="user_complaintlist.html" class="text-gray-600 hover:text-primary mr-2">complaint</a>/</p>
     </div>
